# CodeGrid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STAKING_GO_LIVE.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
icons/: dmg-background.html
landing/: README.md  next.config.test.ts  next.config.ts  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
landing/app/about/: page.tsx
landing/app/agent-bus/: page.tsx
landing/app/agents/: page.tsx
landing/app/analytics/: page.tsx
landing/app/blog/: layout.tsx  (+2 more)
landing/components/: blog-share.tsx  brand-logo.tsx  docs-search.tsx  docs-sidebar.tsx  docs-toc.tsx  docs-ui.tsx  feature-page.tsx  site-footer.tsx  site-nav.tsx
landing/lib/: docs-nav.ts  mentionwell.ts  token.ts  treasury.ts  vegrid.ts
landing/scripts/: generate-og.py
openclaw/: README.md
openclaw/codegrid/: SKILL.md
scripts/: release.sh
skills/: README.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: agent-bus-mcp.cjs
src-tauri/src/: analytics.rs  commands.rs  db.rs  entitlement.rs  env_setup.rs  lib.rs  native_ui.rs  pty_manager.rs  rpc_server.rs  voice.rs  worktree.rs
src/components/: AgentBusPanel.tsx  AnalyticsPanel.tsx  AttentionBar.tsx  BrowserPane.tsx  Canvas.tsx  CanvasControls.tsx  ClaudeMdEditor.tsx  CodeViewer.tsx  CommandPalette.tsx  DiffViewer.tsx  FileTree.tsx  Gated.tsx  GitManager.tsx  GitSetupWizard.tsx  HubBrowser.tsx  McpManager.tsx  MinimizedPaneBar.tsx  NewSessionDialog.tsx  NotePane.tsx  Onboarding.tsx  Pane.tsx  PaneSwitcher.tsx  PremiumPanel.tsx  ProBadge.tsx  ProFeaturesModal.tsx  ProjectSearch.tsx  QuickActions.tsx  ResourceIndicator.tsx  ResourceWarningDialog.tsx  ReviewPanel.tsx  RunButton.tsx  ScratchPane.tsx  Settings.tsx  Sidebar.tsx  SkillsPanel.tsx  StatusBar.tsx  StickyNote.tsx  Terminal.tsx  TerminalManager.tsx  TerminalSidebar.tsx  (+8 more)
src/hooks/: useAttention.ts  useEntitlement.ts  useKeyboardNav.ts  useNativeMenu.ts  useTerminal.ts
src/lib/: codemirrorLangs.ts  entitlement.ts  icons.tsx  ipc.ts  jumpToSession.ts  keybindings.ts  menuPosition.ts  notify.ts  paneTheme.ts  terminalActivity.ts  terminalSnapshots.ts  updater.ts
src/stores/: appStore.ts  attentionStore.ts  entitlementStore.ts  layoutStore.ts  resourceStore.ts  reviewStore.ts  sessionStore.ts  toastStore.ts  updaterStore.ts  voiceStore.ts  workspaceStore.ts
src/styles/: terminal.css
staking/: README.md
staking/contracts/: .gitignore  foundry.toml
(+90 files in other folders)
